[package]
name = "tangled"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntQuant/tangled"
categories = ["network-programming", ]
description = "Work-in-progress UDP networking crate."

[features]
default=["log"]
log=["dep:tracing"]

[[example]]
name = "chat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
tracing = {version="0.1.44",optional = true}
dashmap = "6.1.0"
quinn = {git = "https://github.com/quinn-rs/quinn" }
rcgen = "0.14.8"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "io-util", "sync"] }
bitcode = "0.6.9"
socket2 = "0.6.3"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
test-log = { version = "0.2.20", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
